Start of generic version

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 config.inc.php
-config.inc.php.working
-config.inc.php.ivy
-cache/*
-cache/t_cache/*
-cache/t_compile/*
-cache/_db/*
-cache/t_config/*
 .buildpath
 .project
-.settings/
+.settings
 *.orig
-/cache
+/cache/*
 /.classpath
 /public/about/*
+/plugins/themes/hrp/images/banner.png
+/plugins/themes/hrp/images/footer.png
+/lib/pkp/locale/*/areasOfTheCountry.xml
