Risk Assessment - Added one data (reason for export if export) and the data export is now requested only if collection of bio sample. ATTENTION!!! This change require some modification of the table risk_assessment of the database: moving column "export_human_tissue" right after "biological_samples" and adding after "export_human_tissue" a column "export_reason" with the same properties

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ config.inc.php
 /plugins/themes/hrp/hrp.css
 /lib/pkp/locale/*/areasOfTheCountry.xml
 /lib/pkp/locale/*/researchFields.xml
+/classes/lib/libchart/images/*
+!/classes/lib/libchart/images/PoweredBy.png
